--- a/EF_network_analysis.tex
+++ b/EF_network_analysis.tex
@@ -313,43 +313,50 @@ O'Reilly, Email: \href{mailto:foreilly@stanford.edu}{foreilly@stanford.edu}}
 
 \begin{table}
 \caption*{
-{\fontsize{20}{25}\selectfont  Table 2. Socioeconomic status and home learning environment by country and timepoint\fontsize{8}{10}\selectfont } \\ 
-{\fontsize{14}{17}\selectfont  All summaries are anchored to children with any EF observed at that timepoint (partial EF allowed).\fontsize{8}{10}\selectfont }
+{\fontsize{20}{25}\selectfont  Table 2. Socioeconomic status and home learning environment by country and timepoint\fontsize{8}{10}\selectfont }
 } 
 \fontsize{8.0pt}{10.0pt}\selectfont
 \begin{tabular*}{1\linewidth}{@{\extracolsep{\fill}}l|l|ccccc}
 \toprule
-\multicolumn{2}{c}{} & SA — T1 & SA — T2 & Australia — T1 & Australia — T2 & Australia — T3 \\ 
+\multicolumn{2}{c}{} & Australia — T1 & Australia — T2 & Australia — T3 & SA — T1 & SA — T2 \\ 
 \midrule\addlinespace[2.5pt]
-{\bfseries \multirow[t]{4}{*}{Caregiver education (SA)}} & 1 & 30 (13.8\%) & 30 (15.8\%) & NA & NA & NA \\ 
- & 2 & 5 (2.3\%) & 5 (2.6\%) & NA & NA & NA \\ 
- & 3 & 1 (0.5\%) & 1 (0.5\%) & NA & NA & NA \\ 
- & NA & 181 (83.4\%) & 154 (81.1\%) & NA & NA & NA \\ 
+{\bfseries \multirow[t]{6}{*}{Caregiver education (AUS)}} & 1 & 18 (7.8\%) & 17 (7.8\%) & 8 (7.5\%) & NA & NA \\ 
+ & 2 & 16 (6.9\%) & 15 (6.9\%) & 6 (5.7\%) & NA & NA \\ 
+ & 3 & 61 (26.3\%) & 56 (25.8\%) & 24 (22.6\%) & NA & NA \\ 
+ & 4 & 68 (29.3\%) & 65 (30.0\%) & 34 (32.1\%) & NA & NA \\ 
+ & 5 & 35 (15.1\%) & 34 (15.7\%) & 16 (15.1\%) & NA & NA \\ 
+ & NA & 34 (14.7\%) & 30 (13.8\%) & 18 (17.0\%) & NA & NA \\ 
 \midrule\addlinespace[2.5pt]
-{\bfseries \multirow[t]{6}{*}{Caregiver education (AUS)}} & 1 & NA & NA & 18 (7.8\%) & 17 (7.8\%) & 8 (7.5\%) \\ 
- & 2 & NA & NA & 16 (6.9\%) & 15 (6.9\%) & 6 (5.7\%) \\ 
- & 3 & NA & NA & 61 (26.3\%) & 56 (25.8\%) & 24 (22.6\%) \\ 
- & 4 & NA & NA & 68 (29.3\%) & 65 (30.0\%) & 34 (32.1\%) \\ 
- & 5 & NA & NA & 35 (15.1\%) & 34 (15.7\%) & 16 (15.1\%) \\ 
- & NA & NA & NA & 34 (14.7\%) & 30 (13.8\%) & 18 (17.0\%) \\ 
+{\bfseries \multirow[t]{4}{*}{Caregiver education (SA)}} & 1 & NA & NA & NA & 30 (13.8\%) & 30 (15.8\%) \\ 
+ & 2 & NA & NA & NA & 5 (2.3\%) & 5 (2.6\%) \\ 
+ & 3 & NA & NA & NA & 1 (0.5\%) & 1 (0.5\%) \\ 
+ & NA & NA & NA & NA & 181 (83.4\%) & 154 (81.1\%) \\ 
 \midrule\addlinespace[2.5pt]
-{\bfseries \multirow[t]{4}{*}{Household income (AUS)}} & 1 & NA & NA & 20 (8.6\%) & 19 (8.8\%) & 8 (7.5\%) \\ 
- & 2 & NA & NA & 126 (54.3\%) & 117 (53.9\%) & 51 (48.1\%) \\ 
- & 3 & NA & NA & 43 (18.5\%) & 43 (19.8\%) & 27 (25.5\%) \\ 
- & NA & NA & NA & 43 (18.5\%) & 38 (17.5\%) & 20 (18.9\%) \\ 
+{\bfseries \multirow[t]{4}{*}{Household income (AUS)}} & 1 & 20 (8.6\%) & 19 (8.8\%) & 8 (7.5\%) & NA & NA \\ 
+ & 2 & 126 (54.3\%) & 117 (53.9\%) & 51 (48.1\%) & NA & NA \\ 
+ & 3 & 43 (18.5\%) & 43 (19.8\%) & 27 (25.5\%) & NA & NA \\ 
+ & NA & 43 (18.5\%) & 38 (17.5\%) & 20 (18.9\%) & NA & NA \\ 
 \midrule\addlinespace[2.5pt]
-{\bfseries \multirow[t]{10}{*}{Assets and home learning environment (continuous)}} & HLE activity frequency (sum), Mean (SD) & 10.20 (3.03) & 12.45 (3.54) & NA & NA & NA \\ 
- & HLE activity frequency (sum), n & 214 & 183 & NA & NA & NA \\ 
- & HLE: books/toys total, Mean (SD) & 2.55 (1.00) & 2.59 (1.05) & NA & NA & NA \\ 
- & HLE: books/toys total, n & 215 & 184 & NA & NA & NA \\ 
- & HLE: time total, Mean (SD) & 4.00 (1.77) & 4.11 (1.83) & NA & NA & NA \\ 
- & HLE: time total, n & 217 & 186 & NA & NA & NA \\ 
- & HLE: unique caregiver types involved, Mean (SD) & 2.26 (1.14) & 1.67 (0.74) & NA & NA & NA \\ 
- & HLE: unique caregiver types involved, n & 214 & 105 & NA & NA & NA \\ 
- & Household assets score (SA; NIDS, 0–26), Mean (SD) & 7.80 (3.00) & 7.69 (3.07) & NA & NA & NA \\ 
- & Household assets score (SA; NIDS, 0–26), n & 217 & 190 & NA & NA & NA \\ 
+{\bfseries \multirow[t]{2}{*}{Household income (SA)}} & Household income (SA), Mean (SD) & NA & NA & NA & 7.80 (3.00) & 7.69 (3.07) \\ 
+ & Household income (SA), n & NA & NA & NA & 217 & 190 \\ 
+\midrule\addlinespace[2.5pt]
+{\bfseries \multirow[t]{2}{*}{Home learning environment (AUS)}} & Home learning environment (AUS; HLE Index), Mean (SD) & 17.84 (10.71) & 17.83 (10.45) & 17.17 (11.35) & NA & NA \\ 
+ & Home learning environment (AUS; HLE Index), n & 232 & 217 & 106 & NA & NA \\ 
+\midrule\addlinespace[2.5pt]
+{\bfseries \multirow[t]{8}{*}{Home learning environment (SA)}} & HLE activity frequency (sum), Mean (SD) & NA & NA & NA & 10.20 (3.03) & 12.45 (3.54) \\ 
+ & HLE activity frequency (sum), n & NA & NA & NA & 214 & 183 \\ 
+ & HLE: books/toys total, Mean (SD) & NA & NA & NA & 2.55 (1.00) & 2.59 (1.05) \\ 
+ & HLE: books/toys total, n & NA & NA & NA & 215 & 184 \\ 
+ & HLE: time total, Mean (SD) & NA & NA & NA & 4.00 (1.77) & 4.11 (1.83) \\ 
+ & HLE: time total, n & NA & NA & NA & 217 & 186 \\ 
+ & HLE: unique caregiver types involved, Mean (SD) & NA & NA & NA & 2.26 (1.14) & 1.67 (0.74) \\ 
+ & HLE: unique caregiver types involved, n & NA & NA & NA & 214 & 105 \\ 
 \bottomrule
 \end{tabular*}
+\begin{minipage}{\linewidth}
+\vspace{.05em}
+\textbf{Note.} Summaries are restricted to children with any EF data at each wave (partial EF allowed). In Australia, caregiver education, household income, and the HLE Index are measured once per child and carried across waves; \emph{n} and summary statistics may still differ across T1--T3 because the EF-available sample varies by wave (attrition/partial EF). In South Africa, caregiver education, income, and HLE measures are recorded by wave and summarised only where collected (later-wave cells are NA if not assessed).\\
+\end{minipage}
 \end{table}
 
 \end{landscape}
